fix: alteração no z-index para o conteúdo da janela flutuante em halibilidades sobreporem os demais conteúdos.

--- a/src/components/Content/SkillCard/SkillCard.module.css
+++ b/src/components/Content/SkillCard/SkillCard.module.css
@@ -79,6 +79,7 @@
         border-radius: 10px;
         background-color: var(--background-highlith-color);
         animation: showFloatPanel 1s forwards;
+        z-index: 1;
     }
     .floatPanelAboutText {
         animation: FloatPanelText 1s forwards;
